fix icons on mobile

--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -63,7 +63,7 @@
     justify-content: center;
     align-items: center;
     width: 60vw;
-    padding: 1rem;
+    /*padding: 1rem;*/
 }
 .focus__title {
     font-size: 3rem;
@@ -91,13 +91,15 @@
     position: relative;
     width: 100%;
     margin: 0;
+    margin-top: 1rem;
 }
 .focus__colorBand {
     position: absolute;
     width: 100%;
     height: 20%;
-    top: 50%;
+    top: 37%;
     background-color: var(--dark-color);
+    z-index: -1;
 }
 .focus__picture {
     width: 80%;
@@ -112,6 +114,7 @@
     text-align: justify;
     padding: 1rem;
     color: var(--font-color);
+    margin: 0;
 }
 
 @media(max-width:767px) {
