--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -13,6 +13,7 @@
     border-radius: 25%;
     background-color: var(--contrast);
     margin-left: 10px;
+    padding: 3px;
 }
 .bubble {
     height: 48px;
