--- a/src/Components/Modal/Modal.css
+++ b/src/Components/Modal/Modal.css
@@ -19,11 +19,12 @@ dialog:modal {
         width: 56px;
         height: 56px;
         background-color: white;
-        
+        border-radius: 50%;
         padding: 5px;
         img {
             width: 48px;
             height: 48px;
+            padding: 5px;
         }
     }
 
