--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -32,10 +32,12 @@
     cursor: pointer;
     margin: 1rem;
     background-color: white;
+    border-radius: 50%;
 }
 .navbar__icon {
     width: 40px;
     height: 40px;
+    padding: 4px;
 }
 .navbar__list {
     height: 80%;
